# core_tpl-template-repo

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  NEXT_SESSION_PROMPT.md  README.md  copier.yml  next_session_prompt.md
.github/: pull_request_template.md
contracts/: layer-contract.yml
copier-template/: .gitignore  AGENTS.md  AGENTS.md.jinja  CHANGELOG.md  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md  README.md.jinja  SECURITY.md  SUPPORT.md.jinja  {{ _copier_conf.answers_file }}.jinja
copier-template/copier/tpl-project-repo/tools/rocs-cli/: pyproject.toml
copier-template/copier/tpl-project-repo/tools/rocs-cli/src/rocs_cli/: cache.py  env.py  gitlab.py  id_index.py  lint.py
diary/: 2026-02-24--add-fail-fast-timeout-control-to-check-l0.md  2026-02-24--align-readme-baseline-contracts-with-rendered-output.md  2026-02-24--fix-copier-pin-order-and-fallback-visibility.md  2026-02-24--fix-legacy-template-path-drift-in-l1-helper-scripts.md  2026-02-24--fix-session-checkpoint-guardrails-and-kes-flow.md  2026-02-24--refactor-kes-repo-local-diary-contract.md  2026-02-24--tighten-check-aggregator-warning-signal.md  2026-02-28--deep-review-hardening-fixtures-supply-chain.md  2026-02-28--fix-preview-answers-and-ci-full-lane.md  2026-03-01--deep-review-tpl-project-repo-file-contract-and-surface-cleanup.md  2026-03-01--docs-next-session-prompt-template-replacement.md  2026-03-01--refactor-l1-structure-checklist.md  2026-03-02--ops-holdingco-root-transition-backup-first.md  2026-03-04--chore-preflight-census-upstream-seeding.md  2026-03-13--docs-dsl-learning-linkage.md  (+49 more)
(+608 files in other folders)
